- integrate with Room library - tests with DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Electronics inventory</string>
-    <string name="action_settings">Settings zxcz</string>
+    <string name="action_settings">Settings</string>
 </resources>
